@@ -155,7 +155,7 @@ public class CodecEncoding {
             int h = code + 1;
             // This handles the special cases for invalid combinations of data.
             return new BHSDCodec(b, h, s, d);
-        } else if (value >= 117 && value <= 140) { // Run codec
+        } else if (value <= 140) { // Run codec, it's known that value >= 117
             int offset = value - 117;
             int kx = offset & 3;
             boolean kbflag = (offset >> 2 & 1) == 1;
@@ -181,7 +181,7 @@ public class CodecEncoding {
                 bCodec = getCodec(in.read(), in, defaultCodec);
             }
             return new RunCodec(k, aCodec, bCodec);
-        } else if (value >= 141 && value <= 188) { // Population Codec
+        } else if ( value <= 188) { // Population Codec, it is known value >= 141
             int offset = value - 141;
             boolean fdef = (offset & 1) == 1;
             boolean udef = (offset >> 1 & 1) == 1;
@@ -228,7 +228,7 @@ public class CodecEncoding {
         if(canonicalCodecsToSpecifiers == null) {
             HashMap reverseMap = new HashMap(canonicalCodec.length);
             for (int i = 0; i < canonicalCodec.length; i++) {
-                reverseMap.put(canonicalCodec[i], new Integer(i));
+                reverseMap.put(canonicalCodec[i], Integer.valueOf(i));
             }
             canonicalCodecsToSpecifiers = reverseMap;
         }
